added some lines of code

--- a/welcome.html
+++ b/welcome.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>My name is Adedokun Abdusalam</h1>
+    <h6>My Hobbies</h6>
+    <ul>
+        <li>Playing Games</li>
+        <li>Swimming</li>
+    </ul>
 </body>
 </html>
